yaml_configs/compreface/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: cf-api
  namespace: compreface
spec:
  replicas: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - env:
            - name: API_JAVA_OPTS
              value: '-Xmx8g'
            - name: POSTGRES_PASSWORD
              value: 'postgres'
            - name: POSTGRES_URL
              value: 'jdbc:postgresql://compreface-postgres-db:5432/frs'
            - name: POSTGRES_USER
              value: 'postgres'
            - name: SAVE_IMAGES_TO_DB
              value: 'true'
            - name: SPRING_PROFILES_ACTIVE
              value: 'dev'
          image: 'exadel/compreface-api:latest'
          ports:
          - containerPort: 8080
          name: cf-api
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: compreface-api
  namespace: compreface
spec:
  type: ClusterIP
  selector:
      app: api
  ports:
  - port: 8080
